--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- <script src="https://unpkg.com/vue"></script> -->
+    <script src="https://unpkg.com/vue"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
@@ -41,7 +41,7 @@
             </td>
             <td class="col-xs-2">
                 <span>{{row.date}}</span>
-                <input v-on:blur="updateValue" v-model="row.date">
+                <input v-on:blur="updateValue" v-model="row.date" readonly>
             </td>
         </tr>
         <tr>
